<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/mytheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/otp_layout"
        android:orientation="vertical"
        android:visibility="gone">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/enterotp"
            android:id="@+id/otp"
            android:layout_marginTop="108dp"
            android:textColor="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <EditText
            android:layout_width="@dimen/login_edit_width"
            android:layout_height="@dimen/login_edit_height"
            android:id="@+id/otp_entered"
            android:background="@drawable/oveleditbox"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/otp"
            android:paddingLeft="5dp"
            android:layout_below="@+id/otp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        <requestFocus/>
        </EditText>
        <TextView
            android:id="@+id/otptimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="time"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_alignBaseline="@+id/otp_entered"
            android:layout_alignBottom="@+id/otp_entered"
            android:layout_alignRight="@+id/send_otp_again"
            android:layout_alignEnd="@+id/send_otp_again"
            tools:ignore="ObsoleteLayoutParam" />
</LinearLayout>

        <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/verifyotp"
       android:id="@+id/verify_otp_btn"
       android:background="@drawable/buttonbackground"
       android:textColor="@android:color/white"
       android:layout_below="@+id/otp_entered"
       android:gravity="center"
       android:layout_marginTop="15dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/otpnotreceived"
            android:id="@+id/send_otp_again"
            android:layout_below="@+id/verify_otp_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp"
            android:layout_gravity="center"
            android:clickable="true" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/forget_layout"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forgetpassword"
            android:layout_marginTop="65dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/regmobileno"
            android:id="@+id/enter"
            android:textColor="@android:color/black"
            android:layout_marginBottom="75dp"
            android:layout_above="@+id/send_otp_btn"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendotp"
            android:id="@+id/send_otp_btn"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/buttonbackground"

            android:textColor="@android:color/white" />

        <EditText
            android:layout_width="@dimen/login_edit_width"
            android:layout_height="@dimen/login_edit_height"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/forget_pwd_mobile"
            android:background="@drawable/oveleditbox"
            android:layout_marginBottom="13dp"
            android:hint="@string/mobileno"
            android:paddingLeft="20dp"
            android:layout_above="@+id/send_otp_btn"
            android:layout_centerHorizontal="true">
            <requestFocus/>
            </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/change_pwd_layout"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/changepwd"
            android:id="@+id/change"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="113dp"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="@dimen/login_edit_width"
            android:layout_height="@dimen/login_edit_height"
            android:hint="@string/newpassword"
            android:background="@drawable/oveleditbox"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/drawable_padding"
            android:paddingLeft="@dimen/edittext_paddingLeft"
            android:paddingRight="@dimen/edittext_paddingRight"
            android:paddingTop="@dimen/edittext_paddingTop"
            android:paddingBottom="@dimen/edittext_paddingBottom"
            android:layout_marginTop="45dp"
            android:id="@+id/new_pwd"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/change"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp">
            <requestFocus/>
            </EditText>

        <EditText
            android:layout_width="@dimen/login_edit_width"
            android:layout_height="@dimen/login_edit_height"
            android:hint="Confirm Password"
            android:background="@drawable/oveleditbox"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/drawable_padding"
            android:paddingLeft="@dimen/edittext_paddingLeft"
            android:paddingRight="@dimen/edittext_paddingRight"
            android:paddingTop="@dimen/edittext_paddingTop"
            android:paddingBottom="@dimen/edittext_paddingBottom"
            android:id="@+id/confirm_pwd"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/new_pwd"
            android:layout_alignLeft="@+id/new_pwd"
            android:layout_alignStart="@+id/new_pwd"
            android:layout_marginTop="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:id="@+id/submit_btn"
            android:layout_marginTop="37dp"
            android:layout_below="@+id/confirm_pwd"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:background="@drawable/buttonbackground"/>
    </RelativeLayout>

</LinearLayout>