<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bgblur"
              android:gravity="center"
              android:orientation="vertical"
              android:theme="@style/Profiletheme"
              android:weightSum="10">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/eposnew"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_mobile"
            android:layout_width="300dp"
            android:layout_height="@dimen/login_edit_height"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/oveleditbox"
            android:drawableLeft="@drawable/login_user"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/mobileno"
            android:inputType="phone"
            android:paddingLeft="@dimen/edittext_paddingLeft"
            android:paddingRight="@dimen/edittext_paddingRight">

            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/user_pwd"
            android:layout_width="300dp"

            android:layout_height="@dimen/login_edit_height"
            android:layout_alignLeft="@+id/user_mobile"
            android:layout_alignStart="@+id/user_mobile"
            android:layout_below="@+id/user_mobile"
            android:layout_marginTop="10dp"
            android:background="@drawable/oveleditbox"
            android:drawableLeft="@drawable/user_password"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:paddingLeft="@dimen/edittext_paddingLeft"
            android:paddingRight="@dimen/edittext_paddingRight"
            tools:ignore="ObsoleteLayoutParam">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="@dimen/login_edit_height"
            android:layout_below="@+id/user_pwd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonbackground"
            android:text="@string/login"
            android:textColor="@android:color/black"
            tools:ignore="ObsoleteLayoutParam"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/login_edit_width"
            android:layout_height="20dp"
            android:layout_below="@+id/login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="300dp"
            android:layout_height="@dimen/login_edit_height"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:background="@drawable/buttonbackground"
            android:text="@string/signup"
            android:textColor="@android:color/black"
            tools:ignore="ObsoleteLayoutParam"/>
    </LinearLayout>

    <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_button"
        android:layout_alignStart="@+id/signup_button"
        android:layout_below="@+id/signup_button"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/forgetpwdclick"
        android:background="?attr/selectableItemBackground"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forget_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:clickable="true"
        android:linksClickable="false"
        android:background="?attr/selectableItemBackground"
        android:text="@string/reglater"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="Login to Your Account"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:visibility="gone"/>


</LinearLayout>
