<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg2"
                android:theme="@style/Profiletheme">

    <RelativeLayout
        android:id="@+id/otp_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:theme="@style/mytheme"
        android:visibility="gone">

        <TextView
            android:id="@+id/enter_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:text="@string/enter_the_otp_here"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/background_light"/>

        <EditText
            android:id="@+id/otp"
            android:layout_width="@dimen/login_edit_width"
            android:layout_height="@dimen/login_edit_height"
            android:layout_below="@+id/enter_otp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:background="@drawable/oveleditboxsignup"
            android:hint="@string/otp1"
            android:inputType="number"
            android:paddingLeft="20dp">

            <requestFocus/>
        </EditText>

        <Button
            android:id="@+id/verify_otp_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/buttonbackground"
            android:text="@string/verify_otp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/send_otp_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/otp"
            android:layout_alignStart="@+id/otp"
            android:layout_below="@+id/verify_otp_btn"
            android:layout_marginTop="71dp"
            android:text="@string/not_yet_recieve_otp_click_here"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/White_Text_color"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/otp_layout"
        android:layout_toEndOf="@+id/otp_layout">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/reg_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/linearLayout2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="79dp"
                android:background="@drawable/greybackground"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:visibility="visible">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"

                    android:layout_marginTop="55dp"
                    android:drawableLeft="@drawable/name"
                    android:drawablePadding="10dp"
                    android:hint="@string/name"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@color/White_Text_color"/>

                <EditText
                    android:id="@+id/useremail"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"

                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/fullemail"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@color/Font_Color"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <EditText
                        android:id="@+id/mobileno"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="2"
                        android:drawableLeft="@drawable/fullmobile"
                        android:drawablePadding="10dp"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:textColor="@android:color/background_light"/>

                    <TextView
                        android:id="@+id/verifyotp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:gravity="center"
                       />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <EditText
                        android:id="@+id/userdob"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="9.5"
                        android:drawableLeft="@drawable/dob"
                        android:drawablePadding="10dp"
                        android:hint="@string/dob"
                        android:textColor="@android:color/background_light"
                        android:inputType="date" />

                    <ImageButton
                        android:id="@+id/calendarbtn"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="0.5"
                        android:background="@android:color/transparent"
                        android:scaleType="fitXY"
                        android:src="@drawable/cal"/>
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/radiogrp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/male"
                        android:textColor="@android:color/background_light"/>

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="@android:color/background_light"/>
                </RadioGroup>

                <EditText
                    android:id="@+id/add"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/address"
                    android:drawablePadding="10dp"
                    android:hint="@string/address"
                    android:inputType="textMultiLine|textPostalAddress"
                    android:textColor="@android:color/background_light"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <Button
                        android:id="@+id/save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="10dp"
                        android:layout_weight="5"
                        android:background="@drawable/borderonly"
                        android:text="@string/save"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        />

                    <Button
                        android:id="@+id/edit_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="5"
                        android:background="@drawable/borderonly"
                        android:text="@string/change_password"
                        android:textColor="@color/black"/>
                </LinearLayout>


            </LinearLayout>

            <android.support.design.internal.ForegroundLinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="#00555555"
                android:orientation="vertical">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/userimageupload"
                    android:src="@drawable/userplaceholder"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    app:civ_border="@bool/default_circle_indicator_centered"
                    app:civ_border_color="#ffffff"
                    app:civ_border_width="5dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="#8BC34A"
                    app:civ_shadow_radius="10"/>

                <!-- <ImageView android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:background="@drawable/login_user"
                     android:layout_marginTop="15dp"
                     android:layout_gravity="center_horizontal"/>-->
            </android.support.design.internal.ForegroundLinearLayout>



            <LinearLayout
                android:id="@+id/resetpass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/linearLayout2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/greybackground"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/oldpass"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:hint="Old Password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/background_light"/>

                <EditText
                    android:id="@+id/newpwd"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:hint="New Password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/background_light"/>

                <EditText
                    android:id="@+id/confirmpwd"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/background_light"/>

                <Button
                    android:id="@+id/savebutton_changepass"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/borderonly"
                    android:gravity="center"
                    android:text="Save"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
